kubernetes/jupyter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      #nodeSelector: #Uncomment to specify which node to run this pod on
      #  gpu: "true"    # Example of selecting a node labelled with gpu=true
      containers:
      - name: jupyter
        image: jupyter/tensorflow-notebook:2023-12-01  # Use a specific tag!
        ports:
        - containerPort: 8888
        resources:
          limits:
            nvidia.com/gpu: 1  # Request 1 GPU
          requests:
            cpu: 2  # Example: Request 2 CPU cores
            memory: 4Gi  # Example: Request 4 GB of memory
        volumeMounts:
        - name: data-volume
          mountPath: /home/jovyan/data
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 30
          periodSeconds: 10
        securityContext:
          runAsUser: 1000  # Replace with the appropriate UID
          runAsGroup: 1000 # Replace with the appropriate GID
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc # A PersistentVolumeClaim
